force-app/main/default/objects/CSSettings__c/fields/Default_Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Parent_Account_Owner__c</fullName>
    <label>Default Parent Account Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>