force-app/main/default/objects/CSSettings__c/fields/DefaultOwnerID__c.field-meta.xml
<CustomField>
    <fullName>DefaultOwnerID__c</fullName>
    <label>DefaultOwnerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>