force-app/main/default/objects/CSSettings__c/fields/MarketoUserID__c.field-meta.xml
<CustomField>
    <fullName>MarketoUserID__c</fullName>
    <label>Marketo User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>