force-app/main/default/objects/CSSettings__c/fields/Zuora_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Effective_Date__c</fullName>
    <label>Zuora Effective Date</label>
    <type>Date</type>
</CustomField>